--- a/openbsd_run/playbook/roles/openbsd.monitor/tasks/server.yml
+++ b/openbsd_run/playbook/roles/openbsd.monitor/tasks/server.yml
@@ -1,6 +1,6 @@
 # openbsd.monitor/tasks/server.yml
 
 - name: Install server packages
-  package:
+  pkg:
     name: "{{ moniter_server_packages }}"
     state: present
