--- a/openbsd_run/playbook/roles/openbsd.vmm/tasks/main.yml
+++ b/openbsd_run/playbook/roles/openbsd.vmm/tasks/main.yml
@@ -5,12 +5,13 @@
 #
 
 - name: check dmesg for nested paging support
-  shell: dmesg | egrep "(VMX/EPT|SVM/RVI)"
+  ansible.builtin.raw: >-
+    dmesg | egrep "(VMX/EPT|SVM/RVI)"
   changed_when: (vmm_supported.stdout_lines | length) == 0
   register: vmm_supported
 
 - name: fail if host does not support nested paging
-  fail:
+  ansible.builtin.fail:
     msg: >-
       Host does not support nested paging!
   failed_when: vmm_supported.changed
@@ -20,7 +21,7 @@
 #
 
 - name: create directories
-  file:
+  ansible.builtin.file:
     path: "{{ item }}"
     state: directory
     owner: root
@@ -30,7 +31,7 @@
     - "/home/vm/default"
 
 - name: configure vmm
-  template:
+  ansible.builtin.template:
     src: etc/vm.conf.j2
     dest: /etc/vm.conf
   notify:
@@ -38,23 +39,23 @@
 
 # TODO: move to vmctl module
 - name: create default disk(s)
-  shell: >-
+  ansible.builtin.raw: >-
     vmctl create -s {{ item.disk }}
     /home/vm/default/{{ item.name }}.qcow2
   changed_when: ("imagefile created" in result.stdout)
-  failed_when: false
   register: result
   with_items: "{{ vmm_plans }}"
 
 - name: enable and start vmd service
-  service:
+  ansible.builtin.service:
     name: "vmd"
     state: started
     enabled: true
 
 # TODO: move to vmctl module
 - name: check vmd
-  shell: rcctl check vmd
+  ansible.builtin.raw: >-
+    rcctl check vmd
   changed_when: vmd_check.stdout != "vmd(ok)"
   register: vmd_check
 
@@ -63,14 +64,14 @@
 #
 
 - name: allow IP forwarding for NAT
-  sysctl:
+  ansible.posix.sysctl:
     name: "net.inet.ip.forwarding"
     value: "1"
     state: present
 
 # TODO: missing description; needs better name
 # - name: increase the max length of arpq
-#   sysctl:
+#   ansible.posix.sysctl:
 #     name: "net.inet.ip.arpq.maxlen"
 #     value: "1024"
 #     state: present
@@ -80,7 +81,7 @@
 #
 
 - name: add pf includes
-  template:
+  ansible.builtin.template:
     src: "etc/pf/includes/{{ item }}.j2"
     dest: "/etc/pf/includes/{{ item }}"
     owner: root
@@ -89,11 +90,11 @@
   with_items: "{{ vmm_pf_includes }}"
 
 - name: update pf_includes list
-  set_fact:
+  ansible.builtin.set_fact:
     pf_includes: "{{ pf_includes + vmm_pf_includes }}"
 
 - name: adjust /etc/pf/includes.conf
-  template:
+  ansible.builtin.template:
     src: etc/pf/includes.conf.j2
     dest: /etc/pf/includes.conf
     owner: root
