--- a/openbsd_run/playbook/site-check.yml
+++ b/openbsd_run/playbook/site-check.yml
@@ -7,19 +7,19 @@
 
   handlers:
     - name: Install Python 3.x if missing
-      raw: >-
+      ansible.builtin.raw: >-
         pkg_add python3
 
   tasks:
     - name: Confirm host is running OpenBSD
-      raw: >-
+      ansible.builtin.raw: >-
         uname
       changed_when: false
       failed_when: ("OpenBSD" not in uname.stdout)
       register: uname
 
     - name: Check if Python 3.x is present
-      raw: >-
+      ansible.builtin.raw: >-
         command -v python3
       changed_when: not python_check
       failed_when: false
