Bundle required ansible collections to be used as a last resort
Rather than requiring additional setup steps, when searching for
ansible collections we will respect whatever collection versions are
available on the host, though in cases where a required collection is
not present we will fall back to the included collections folder. This
is going to create a _ton_ of churn in git commits, and I recognize
this is rather dumb, though I have no way of implicitly demanding a
collection is installed. I can trim the total churn down with some
ignore rules, so hopefully this isn't too gross for the time being.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,17 @@
 
 inventory.yml
 
+# For ansible-galaxy stuff we bundle, trim as much junk as possible
+# from our own commit history.
+openbsd_run/playbook/**/.azure-pipelines/
+openbsd_run/playbook/**/.github/
+openbsd_run/playbook/**/changelogs/
+openbsd_run/playbook/**/docs/
+openbsd_run/playbook/**/hacking/
+openbsd_run/playbook/**/tests/
+openbsd_run/playbook/**/*.md
+openbsd_run/playbook/**/*.rst
+openbsd_run/playbook/**/*.txt
 
 #
 # Python
