--- a/openbsd_run/playbook/ansible.cfg
+++ b/openbsd_run/playbook/ansible.cfg
@@ -18,10 +18,15 @@ stdout_callback = default
 transport = ssh
 var_compression_level = 9
 
-# Paths
-#inventory = ./inventory:~/.ansible/hosts:/etc/ansible/hosts
-library = ./modules
-#roles_path = ./roles
+# Attempt to use the system's collections, with a fallback to collections that
+# are bundled in the playbook.
+collections_path = ~/.ansible/collections:/usr/share/ansible/collections:./collections
+
+# Ensure our custom modules are loaded before all other modules.
+library = ./modules:~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
+
+# Ensure our roles are loaded before all other roles.
+roles_path = ./roles:~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
 
 [diff]
 always = True
