Comment out callback_whitelist for quieter output
If you want to enable a callback whitelist, do so in
/etc/ansible/ansible.cfg

--- a/openbsd_run/playbook/ansible.cfg
+++ b/openbsd_run/playbook/ansible.cfg
@@ -4,7 +4,7 @@
 ansible_managed = Managed by Ansible. Do not edit directly.
 any_errors_fatal = True
 bin_ansible_callbacks = True
-callback_whitelist = profile_roles,timer
+#callback_whitelist = profile_roles,timer
 command_warnings = False
 deprecation_warnings = False
 forks = 50
