--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,11 @@ packages = [{ include = "openbsd_run" }]
 
 [tool.poetry.dependencies]
 python = "^3.6.2"
-
 ansible-core = "^2.11.0-beta.3"
-ansible-runner = "^1.4.7"
-click = "^7.1.2"
-cryptography = "^3.4.6"
-jinja2 = "^2.11.3"
+ansible-runner = "~1.4.7"
+click = "~7.1.2"
+cryptography = ">= 3.1, < 3.4"
+jinja2 = "~2.11.3"
 packaging = "~20.9"
 resolvelib = "~0.5.4"
 
