--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [mypy]
 strict = true
 
-# found module but no type hints or library stubs
+# Found module but no type hints or library stubs
 ignore_missing_imports = True
 
 [pydocstyle]
@@ -14,4 +14,4 @@ ignore =
     D107, # Missing docstring in __init__
     D200, # One-line docstring should fit on one line with quotes
     D202, # No blank lines allowed after function docstring
-    D212  # Multi-line docstring summary should start at the first line
+    D212, # Multi-line docstring summary should start at the first line
