--- a/openbsd_run/playbook/site-sysupgrade.yml
+++ b/openbsd_run/playbook/site-sysupgrade.yml
@@ -5,11 +5,13 @@
 
 - name: sysupgrade
   hosts: all
+
   vars:
     sysupgrade_branch: "auto"
     sysupgrade_force: false
     sysupgrade_reboot: true
     sysupgrade_reboot_timeout: "600"
+
   tasks:
     - name: upgrade to latest release or snapshot
       sysupgrade:
@@ -25,3 +27,4 @@
       when:
         - sysupgrade_result.changed
         - sysupgrade_result.reboot
+        - sysupgrade_reboot
