--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [mypy]
+ignore_missing_imports = true # Found module but no type hints or library stubs
 strict = true
 
-# Found module but no type hints or library stubs
-ignore_missing_imports = True
-
-[pydocstyle]
+[flake8]
+exclude =
+    ansible_collections
 ignore =
     D100, # Missing docstring in public module
     D101, # Missing docstring in public class
@@ -15,3 +15,45 @@ ignore =
     D200, # One-line docstring should fit on one line with quotes
     D202, # No blank lines allowed after function docstring
     D212, # Multi-line docstring summary should start at the first line
+
+[tox:tox]
+envlist =
+    testenv
+    bandit
+    flake8
+    mypy
+ignore_basepython_conflict = true
+isolated_build = true
+minversion = 3.20.0
+skip_missing_interpreters = true
+
+[testenv]
+allowlist_externals =
+    poetry
+    poetry-core
+basepython = python3
+commands =
+    poetry install --no-root
+setenv =
+    PYTHONDONTWRITEBYTECODE=true
+    PYTHONPYCACHEPREFIX=/tmp
+    PYTHONUNBUFFERED=true
+skip_install = true
+
+[testenv:bandit]
+allowlist_externals = bandit
+commands =
+    bandit --version
+    bandit --exclude "**/ansible_collections/*" --quiet -r openbsd_run/
+
+[testenv:flake8]
+allowlist_externals = flake8
+commands =
+    flake8 --version
+    flake8 openbsd_run/
+
+[testenv:mypy]
+allowlist_externals = mypy
+commands =
+    mypy --version
+    mypy --exclude "/ansible_collections/" openbsd_run/
