Resolve pipeline errors

--- a/.build.yml
+++ b/.build.yml
@@ -1,14 +1,18 @@
 image: openbsd/latest
+
 environment:
   PIP_DISABLE_PIP_VERSION_CHECK: true
   PYTHONDONTWRITEBYTECODE: true
   PYTHONUNBUFFERED: true
+
 packages:
   - python3
   - py3-pip
   - py3-wheel
+
 sources:
   - https://git.sr.ht/~jcmdln/openbsd-run
+
 tasks:
   - prepare: |
       pip3.8 install --user poetry
@@ -16,4 +20,4 @@ tasks:
       ~/.local/bin/poetry install --no-root
   - lint: |
       cd openbsd-run
-      ~/.local/bin/poetry run tox
+      ~/.local/bin/poetry run tox -e bandit,flake8,mypy
