--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [mypy]
-ignore_missing_imports = true # Found module but no type hints or library stubs
+ignore_missing_imports = true
 strict = true
 
 [flake8]
