Pin dependencies to specific versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,6 @@
-[mypy]
-ignore_missing_imports = true
-strict = true
-
 [flake8]
 exclude =
-    ansible_collections
+    **/ansible_collections/*
 ignore =
     D100, # Missing docstring in public module
     D101, # Missing docstring in public class
@@ -15,6 +11,10 @@ ignore =
     D200, # One-line docstring should fit on one line with quotes
     D202, # No blank lines allowed after function docstring
     D212, # Multi-line docstring summary should start at the first line
+
+[mypy]
+ignore_missing_imports = true
+strict = true
 
 [tox:tox]
 envlist =
