--- a/openbsd_run/playbook/site-check.yml
+++ b/openbsd_run/playbook/site-check.yml
@@ -21,7 +21,7 @@
     - name: Check if Python 3.x is present
       ansible.builtin.raw: >-
         command -v python3
-      changed_when: not python_check
+      changed_when: not python_check or python_check.rc > 0
       failed_when: false
       notify:
         - Install Python 3.x if missing
