--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,25 +25,23 @@ packaging = "20.9"
 resolvelib = "0.5.4"
 
 [tool.poetry.dev-dependencies]
-bandit = "^1.7.0"
-black = "^20.8b1"
-coverage = "^5.5"
-flake8 = "^3.9.0"
-flake8-black = "^0.2.1"
-flake8-docstrings = "^1.6.0"
-flake8-isort = "^4.0.0"
-mccabe = "^0.6.1"
-mypy = "^0.812"
-pycodestyle = "^2.7.0"
-pydocstyle = "^6.0.0"
-pyflakes = "^2.3.1"
-pyls-black = "^0.4.6"
-pyls-isort = "^0.2.0"
-pytest = "^6.2.3"
-python-language-server = "^0.36.2"
-rope = "^0.18.0"
-sphinx = "^3.5.3"
-tox = "^3.23.0"
+bandit = "1.7.0"
+black = "20.8b1"
+flake8 = "3.9.0"
+flake8-black = "0.2.1"
+flake8-docstrings = "1.6.0"
+flake8-isort = "4.0.0"
+mccabe = "0.6.1"
+mypy = "0.812"
+pycodestyle = "2.7.0"
+pydocstyle = "6.0.0"
+pyflakes = "2.3.1"
+pyls-black = "0.4.6"
+pyls-isort = "0.2.0"
+pytest = "6.2.3"
+python-language-server = "0.36.2"
+rope = "0.19.0"
+tox = "3.23.0"
 
 [tool.poetry.scripts]
 openbsd-run = "openbsd_run.main:cli"
