--- a/.gitignore
+++ b/.gitignore
@@ -262,11 +262,7 @@ tags
 # VS Code
 #
 
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode/
 *.code-workspace
 
 # Local History for Visual Studio Code
