--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,65 +1,13 @@
-# pyproject.toml
-
 [build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core>=1.0.0"]
-
-[tool.poetry]
-name = "openbsd-run"
-version = "0.1.0"
-description = ""
-license = "MIT"
-readme = "README.md"
-repository = "https://github.com/jcmdln/openbsd.run"
-authors = ["Johnathan C. Maudlin <jcmdln@gmail.com>"]
-packages = [{ include = "openbsd_run" }]
-
-[tool.poetry.dependencies]
-python = "^3.7"
-ansible-core = "2.11.0rc2"
-ansible-runner = "1.4.7"
-click = "7.1.2"
-cryptography = ">= 3.1, < 3.4"
-jinja2 = "2.11.3"
-packaging = "20.9"
-resolvelib = "0.5.4"
-
-[tool.poetry.dev-dependencies]
-bandit = "1.7.0"
-black = "20.8b1"
-flake8 = "3.9.0"
-flake8-black = "0.2.1"
-flake8-docstrings = "1.6.0"
-flake8-isort = "4.0.0"
-mccabe = "0.6.1"
-mypy = "0.812"
-pycodestyle = "2.7.0"
-pydocstyle = "6.0.0"
-pyflakes = "2.3.1"
-pyls-black = "0.4.6"
-pyls-isort = "0.2.0"
-pytest = "6.2.3"
-python-language-server = "0.36.2"
-rope = "0.19.0"
-tox = "3.23.0"
-
-[tool.poetry.scripts]
-openbsd-run = "openbsd_run.main:cli"
-
-#
-# Extras
-#
+build-backend = "setuptools.build_meta"
+requires = [ "setuptools>=42", "wheel"]
 
 [tool.black]
 line-length = 79
-exclude = '''
-ansible_collections/
-'''
 
 [tool.isort]
 line_length = 79
 lines_between_types = 1
 profile = "black"
 remove_redundant_aliases = true
-skip_glob = "**/ansible_collections/*"
 wrap_length = 79
