--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,4 @@
 [flake8]
-exclude =
-    **/ansible_collections/*
 ignore =
     D100, # Missing docstring in public module
     D101, # Missing docstring in public class
@@ -11,13 +9,13 @@ ignore =
     D200, # One-line docstring should fit on one line with quotes
     D202, # No blank lines allowed after function docstring
     D212, # Multi-line docstring summary should start at the first line
+    W503, # Line break before binary operator
 
 [mypy]
 ignore_missing_imports = true
 
 [tox:tox]
 envlist =
-    testenv
     bandit
     flake8
     mypy
@@ -27,12 +25,9 @@ minversion = 3.20.0
 skip_missing_interpreters = true
 
 [testenv]
-allowlist_externals =
-    poetry
-    poetry-core
 basepython = python3
-commands =
-    poetry install --no-root
+deps =
+    -r{toxinidir}/requirements-lint.txt
 setenv =
     PYTHONDONTWRITEBYTECODE=true
     PYTHONPYCACHEPREFIX=/tmp
@@ -40,19 +35,16 @@ setenv =
 skip_install = true
 
 [testenv:bandit]
-allowlist_externals = bandit
 commands =
     bandit --version
-    bandit --exclude "**/ansible_collections/*" --quiet -r openbsd_run/
+    bandit --quiet -r openbsd_run/
 
 [testenv:flake8]
-allowlist_externals = flake8
 commands =
     flake8 --version
     flake8 openbsd_run/
 
 [testenv:mypy]
-allowlist_externals = mypy
 commands =
     mypy --version
-    mypy --exclude "/ansible_collections/" openbsd_run/
+    mypy openbsd_run/
