--- a/.build.yml
+++ b/.build.yml
@@ -3,13 +3,14 @@ image: openbsd/latest
 packages:
   - python3
   - py3-pip
-  - py3-tox
   - py3-wheel
 
 sources:
   - https://git.sr.ht/~jcmdln/openbsd-run
 
 tasks:
+  - prepare: |
+      python3 -m pip install --user tox
   - lint: |
       cd openbsd-run
-      tox
+      ~/.local/bin/tox
