Switch to .builds dir

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,17 @@
-pyls-black==0.4.6
-pyls-isort==0.2.0
-pytest==6.2.3
-python-language-server==0.36.2
-tox==3.23.0
+bandit
+black
+flake8
+flake8-black
+flake8-docstrings
+flake8-isort
+mccabe
+mypy
+pycodestyle
+pydocstyle
+pyflakes
+pyls-black
+pyls-isort
+pytest
+python-language-server
+rope
+tox
