--- a/setup.cfg
+++ b/setup.cfg
@@ -26,8 +26,6 @@ skip_missing_interpreters = true
 
 [testenv]
 basepython = python3
-deps =
-    -r{toxinidir}/requirements-lint.txt
 setenv =
     PYTHONDONTWRITEBYTECODE=true
     PYTHONPYCACHEPREFIX=/tmp
@@ -38,13 +36,28 @@ skip_install = true
 commands =
     bandit --version
     bandit --quiet -r openbsd_run/
+deps =
+    bandit
 
 [testenv:flake8]
 commands =
     flake8 --version
     flake8 openbsd_run/
+deps =
+    black
+    flake8
+    flake8-black
+    flake8-docstrings
+    flake8-isort
+    mccabe
+    pyflakes
+    pycodestyle
+    pydocstyle
+    rope
 
 [testenv:mypy]
 commands =
     mypy --version
     mypy openbsd_run/
+deps =
+    mypy
