--- a/openbsd_run/playbook/roles/openbsd.mail/defaults/main.yml
+++ b/openbsd_run/playbook/roles/openbsd.mail/defaults/main.yml
@@ -1,8 +1,7 @@
 # openbsd.mail/defaults/main.yml
-
-mail_dkim_domain: "domain.tld"
+---
 mail_dkim_selector: "domain"
-mail_domain: "mail.domain.tld"
+mail_domain: "domain.tld"
 mail_packages:
   - dovecot
   - opensmtpd-extras
