--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ envlist =
     mypy
 ignore_basepython_conflict = true
 isolated_build = true
-minversion = 3.20.0
+minversion = 3.23.1
 skip_missing_interpreters = true
 
 [testenv]
@@ -39,28 +39,28 @@ commands =
     bandit --version
     bandit --quiet -r openbsd_run/
 deps =
-    bandit
+    bandit==1.7.0
 
 [testenv:flake8]
 commands =
     flake8 --version
     flake8 openbsd_run/
 deps =
-    black
-    flake8
-    flake8-black
-    flake8-docstrings
-    flake8-isort
-    mccabe
-    pyflakes
-    pycodestyle
-    pydocstyle
-    rope
+    black==21.6b0
+    flake8==3.9.2
+    flake8-black==0.2.1
+    flake8-docstrings==1.6.0
+    flake8-isort==4.0.0
+    mccabe==0.6.1
+    pyflakes==2.3.1
+    pycodestyle==2.7.0
+    pydocstyle==6.1.1
+    rope==2.3.1
 
 [testenv:mypy]
 commands =
     mypy --version
     mypy openbsd_run/
 deps =
-    mypy
-    types-pyyaml
+    mypy==0.910
+    types-pyyaml==5.4.3
