--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,57 @@
+# SPDX-License-Identifier: ISC
+
 [build-system]
-build-backend = "setuptools.build_meta"
-requires = [ "setuptools>=42", "wheel"]
+build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.3"]
+
+[tool.poetry]
+name = "openbsd-run"
+version = "0.1.0"
+description = ""
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/jcmdln/openbsd.run"
+authors = ["Johnathan C. Maudlin <jcmdln@gmail.com>"]
+packages = [{ include = "openbsd_run" }]
+
+[tool.poetry.dependencies]
+python = "^3.7"
+ansible = ">=2.9"
+ansible-runner = "2.0.1"
+click = "8.0.1"
+cryptography = ">= 3.1"
+pyyaml = "5.4.1"
+resolvelib = ">=0.5.4, !=0.5.5"
+
+[tool.poetry.dev-dependencies]
+bandit = "1.7.0"
+black = "21.6b0"
+#coverage = "5.5"
+flake8 = "3.9.2"
+flake8-black = "0.2.1"
+flake8-docstrings = "1.6.0"
+flake8-isort = "4.0.0"
+mccabe = "0.6.1"
+mypy = "0.910"
+pycodestyle = "2.7.0"
+pydocstyle = "6.1.1"
+pyflakes = "2.3.1"
+pyls-flake8 = "0.4.0"
+pyls-isort = "0.2.2"
+#pytest = "6.2.4"
+python-lsp-black = "1.0.0"
+python-lsp-server = "1.1.0"
+rope = "0.19.0"
+#sphinx = "4.1.0"
+tox = "3.23.1"
+types-pyyaml = "5.4.3"
+
+[tool.poetry.scripts]
+openbsd-run = "openbsd_run.main:cli"
+
+#
+# Extras
+#
 
 [tool.black]
 line-length = 79
