playbook: Use standard paths for modules

--- a/openbsd_run/playbook/ansible.cfg
+++ b/openbsd_run/playbook/ansible.cfg
@@ -2,32 +2,27 @@
 
 [defaults]
 ansible_managed = Managed by Ansible. Do not edit directly.
-any_errors_fatal = True
-bin_ansible_callbacks = True
+any_errors_fatal = true
+bin_ansible_callbacks = true
+callback_whitelist = timer
 command_warnings = False
 deprecation_warnings = False
 forks = 50
 gather_subset = hardware,min,network,virtual
 gather_timeout = 300
 gathering = smart
-inject_facts_as_vars = True
+inject_facts_as_vars = true
 internal_poll_interval = 0.01
 nocows = 1
 stdout_callback = default
 transport = ssh
 var_compression_level = 9
 
-# Ensure our custom modules are loaded before all other modules.
-library = ./modules:~/.ansible/plugins/modules:/usr/share/ansible/modules
-
-# Ensure our roles are loaded before all other roles.
-roles_path = ./roles:~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
-
 [diff]
-always = True
+always = true
 
 [inventory]
-unparsed_is_failed = True
+unparsed_is_failed = true
 
 [persistent_connection]
 command_timeout = 300
@@ -38,9 +33,9 @@ timeout = 300
 become_method = doas
 
 [ssh_connection]
-pipelining = True
+pipelining = true
 retries = 1
-sftp_batch_mode = True
+sftp_batch_mode = true
 ssh_args =
     -C
     -o ControlMaster=auto
