--- a/sample.inventory.yml
+++ b/sample.inventory.yml
@@ -5,7 +5,8 @@ all:
     ansible_become: true
     ansible_become_method: sudo
     ansible_python_interpreter: /usr/local/bin/python3
-    ansible_ssh_pass: vagrant
+    ansible_ssh_private_key_file: >-
+      .vagrant/machines/openbsd-1/libvirt/private_key
     ansible_user: vagrant
 
 mail:
