--- a/sample.inventory.yml
+++ b/sample.inventory.yml
@@ -6,7 +6,7 @@ all:
     ansible_become_method: sudo
     ansible_python_interpreter: /usr/local/bin/python3
     ansible_ssh_private_key_file: >-
-      .vagrant/machines/openbsd-1/libvirt/private_key
+      {{ lookup('env','PWD') }}/.vagrant/machines/openbsd-1/libvirt/private_key
     ansible_user: vagrant
 
 mail:
