--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core>=1.0.3"]
+requires = ["poetry-core>=1.0.0"]
 
 [tool.poetry]
 name = "openbsd-run"
@@ -17,21 +17,26 @@ packages = [{ include = "openbsd_run" }]
 [tool.poetry.dependencies]
 python = "^3.7"
 ansible = ">=2.9"
-ansible-runner = "2.0.1"
+ansible-runner = "2.0.2"
 click = "8.0.1"
-cryptography = ">= 3.1"
+cryptography = ">=3.1"
 pyyaml = "5.4.1"
 resolvelib = ">=0.5.4, !=0.5.5"
 
 [tool.poetry.dev-dependencies]
+# coverage = "5.4"
+# pytest = "^6.2.2"
+# sphinx = "^3.4.3"
 bandit = "1.7.0"
-black = "21.6b0"
-#coverage = "5.5"
+black = "21.7b0"
 flake8 = "3.9.2"
-flake8-black = "0.2.1"
+flake8-black = "0.2.3"
 flake8-docstrings = "1.6.0"
 flake8-isort = "4.0.0"
+isort = "5.9.3"
+jedi = "0.18.0"
 mccabe = "0.6.1"
+memestra = "0.2.0"
 mypy = "0.910"
 pycodestyle = "2.7.0"
 pydocstyle = "6.1.1"
@@ -40,10 +45,10 @@ pyls-flake8 = "0.4.0"
 pyls-isort = "0.2.2"
 #pytest = "6.2.4"
 python-lsp-black = "1.0.0"
-python-lsp-server = "1.1.0"
+python-lsp-server = "1.2.1"
 rope = "0.19.0"
 #sphinx = "4.1.0"
-tox = "3.23.1"
+tox = "3.24.2"
 types-pyyaml = "5.4.3"
 
 [tool.poetry.scripts]
