--- a/sample.inventory.yml
+++ b/sample.inventory.yml
@@ -3,7 +3,7 @@
 all:
   vars:
     ansible_become: true
-    ansible_become_method: sudo
+    ansible_become_method: doas
     ansible_python_interpreter: /usr/local/bin/python3
     ansible_ssh_private_key_file: >-
       {{ lookup('env','PWD') }}/.vagrant/machines/{{-
@@ -12,4 +12,4 @@ all:
 
 mail:
   hosts:
-    openbsd-1:
+    openbsd:
