--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ packages = [{ include = "openbsd_run" }]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-ansible = "^4.7.0"
+ansible = "^4.5.0"
+ansible-core = "^2.11.5"
 ansible-runner = "^2.0.2"
 click = "^8.0.3"
 pyyaml = "^6.0"
