--- a/.builds/openbsd.yml
+++ b/.builds/openbsd.yml
@@ -12,7 +12,8 @@ sources:
 
 tasks:
   - prepare: |
-      python3 -m pip install --progress-bar off --user tox==3.23.1
+      python3 -m pip install --progress-bar off --user poetry>=1.1
   - lint: |
       cd openbsd-run
-      ~/.local/bin/tox
+      ~/.local/bin/poetry install --no-root
+      ~/.local/bin/poetry run tox
