--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,11 @@ minversion = 3.23.1
 skip_missing_interpreters = true
 
 [testenv]
+allowlist_externals =
+    poetry
 basepython = python3
+commands =
+    poetry install --no-root
 setenv =
     PYTHONDONTWRITEBYTECODE=true
     PYTHONPYCACHEPREFIX=/tmp
@@ -36,31 +40,15 @@ skip_install = true
 
 [testenv:bandit]
 commands =
-    bandit --version
-    bandit --quiet -r openbsd_run/
-deps =
-    bandit==1.7.0
+    poetry run bandit --version
+    poetry run bandit --quiet -r openbsd_run/
 
 [testenv:flake8]
 commands =
-    flake8 --version
-    flake8 openbsd_run/
-deps =
-    black==21.6b0
-    flake8==3.9.2
-    flake8-black==0.2.1
-    flake8-docstrings==1.6.0
-    flake8-isort==4.0.0
-    mccabe==0.6.1
-    pyflakes==2.3.1
-    pycodestyle==2.7.0
-    pydocstyle==6.1.1
-    rope==0.19.0
+    poetry run flake8 --version
+    poetry run flake8 openbsd_run/
 
 [testenv:mypy]
 commands =
-    mypy --version
-    mypy openbsd_run/
-deps =
-    mypy==0.910
-    types-pyyaml==5.4.3
+    poetry run mypy --version
+    poetry run mypy openbsd_run/
