--- a/openbsd_run/playbook/roles/openbsd.monitor/tasks/server.yml
+++ b/openbsd_run/playbook/roles/openbsd.monitor/tasks/server.yml
@@ -2,5 +2,5 @@
 
 - name: Install server packages
   pkg:
-    name: "{{ moniter_server_packages }}"
+    name: "{{ monitor_server_packages }}"
     state: present
