--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,32 +16,41 @@ packages = [{ include = "openbsd_run" }]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-ansible = "5.0.1"
-ansible-runner = "2.1.1"
-click = "8.0.3"
-pyyaml = "6.0"
+ansible = "^5.3.0"
+ansible-runner = "^2.1.1"
+click = "^8.0.3"
+pyyaml = "^6.0"
 resolvelib = ">=0.5.4,!=0.5.5"
 
 [tool.poetry.dev-dependencies]
-bandit = "1.7.1"
-black = "21.12b0"
-flake8 = "4.0.1"
-flake8-black = "0.2.3"
-flake8-docstrings = "1.6.0"
-flake8-isort = "4.1.1"
-isort = "5.10.1"
-jedi = "0.18.1"
-memestra = "0.2.0"
-mypy = "0.910"
-pycodestyle = "2.8.0"
-pydocstyle = "6.1.1"
-pyflakes = "2.4.0"
-pyls-flake8 = "0.4.0"
-pyls-isort = "0.2.2"
-python-lsp-black = "1.0.1"
-python-lsp-server = "1.3.2"
-rope = "0.19.0"
-tox = "3.24.4"
+ansible-lint = "^5.4.0"
+bandit = "^1.7.0"
+black = "^22.1.0"
+coverage = "^6.3.1"
+flake8 = "^4.0.1"
+flake8-black = "^0.2.4"
+flake8-docstrings = "^1.6.0"
+flake8-isort = "^4.0.2"
+isort = "^5.10.1"
+jedi = "^0.18.1"
+mccabe = "^0.6.1"
+memestra = "^0.2.0"
+mypy = ">=0.931"
+pyls-flake8 = "^0.4.0"
+pyls-isort = "^0.2.2"
+pyls-memestra = "^0.0.15"
+pylsp-mypy = "^0.5.7"
+pylsp-rope = "^0.1.8"
+pytest = "^7.0.0"
+python-lsp-black = "^1.1.0"
+python-lsp-server = { version = "^1.3.3", extras = [
+    "mccabe",
+    "pycodestyle",
+    "pydocstyle",
+    "pyflakes",
+    "rope",
+] }
+tox = "^3.24.5"
 types-pyyaml = "6.0.1"
 
 [tool.poetry.scripts]
