--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,9 @@ flake8-isort = "^4.0.2"
 isort = "^5.10.1"
 jedi = "^0.18.1"
 mccabe = "^0.6.1"
-memestra = "^0.2.0"
 mypy = ">=0.931"
 pyls-flake8 = "^0.4.0"
 pyls-isort = "^0.2.2"
-pyls-memestra = "^0.0.15"
 pylsp-mypy = "^0.5.7"
 pylsp-rope = "^0.1.8"
 pytest = "^7.0.0"
@@ -51,7 +49,8 @@ python-lsp-server = { version = "^1.3.3", extras = [
     "rope",
 ] }
 tox = "^3.24.5"
-types-pyyaml = "6.0.1"
+types-pyyaml = "^6.0.1"
+yamllint = "^1.26.3"
 
 [tool.poetry.scripts]
 openbsd-run = "openbsd_run.main:cli"
