Dependency bump; 99-col max; yml->yaml

--- a/openbsd_run/playbook/ansible.cfg
+++ b/openbsd_run/playbook/ansible.cfg
@@ -4,17 +4,18 @@
 ansible_managed = Managed by Ansible. Do not edit directly.
 any_errors_fatal = true
 bin_ansible_callbacks = true
-callback_whitelist = timer
-command_warnings = False
-deprecation_warnings = False
+callbacks_enabled = profile_roles,timer
+command_warnings = false
+deprecation_warnings = false
 forks = 50
 gather_subset = hardware,min,network,virtual
 gather_timeout = 300
 gathering = smart
 inject_facts_as_vars = true
 internal_poll_interval = 0.01
+localhost_warning = false
 nocows = 1
-stdout_callback = default
+stdout_callback = community.general.yaml
 transport = ssh
 var_compression_level = 9
 
@@ -29,16 +30,11 @@ command_timeout = 300
 connect_timeout = 300
 timeout = 300
 
-[privilege_escalation]
-become_method = doas
-
 [ssh_connection]
-pipelining = true
 retries = 1
-sftp_batch_mode = true
 ssh_args =
     -C
     -o ControlMaster=auto
     -o ControlPersist=60s
     -o PreferredAuthentications=publickey,password
-usetty = False
+    -o StrictHostKeyChecking=no
