--- a/setup.cfg
+++ b/setup.cfg
@@ -12,9 +12,7 @@ ignore =
     D202, # No blank lines allowed after function docstring
     D212, # Multi-line docstring summary should start at the first line
     W503, # Line break before binary operator
-
-[mypy]
-ignore_missing_imports = true
+max-line-length = 99
 
 [tox:tox]
 envlist =
@@ -41,14 +39,19 @@ skip_install = true
 [testenv:bandit]
 commands =
     poetry run bandit --version
-    poetry run bandit --quiet -r openbsd_run/
+    poetry run bandit --quiet -r {toxinidir}/openbsd_run/
+
+[testenv:black]
+commands =
+    poetry run black --version
+    poetry run black --check --diff {toxinidir}/openbsd_run/
 
 [testenv:flake8]
 commands =
     poetry run flake8 --version
-    poetry run flake8 openbsd_run/
+    poetry run flake8 {toxinidir}/openbsd_run/
 
 [testenv:mypy]
 commands =
     poetry run mypy --version
-    poetry run mypy openbsd_run/
+    poetry run mypy {toxinidir}/openbsd_run/
