--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #
 
 *.retry
-inventory.yml
+inventory.yaml
 
 
 #
@@ -250,7 +250,6 @@ tags
 # VS Code
 #
 
-.vscode/
 *.code-workspace
 
 # Local History for Visual Studio Code
