--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,40 +16,39 @@ packages = [{ include = "openbsd_run" }]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-ansible = "^5.3.0"
-ansible-runner = "^2.1.1"
-click = "^8.0.3"
+ansible = "^5.8.0"
+ansible-runner = "^2.2.0"
+click = "^8.1.3"
 pyyaml = "^6.0"
 resolvelib = ">=0.5.4,!=0.5.5"
 
 [tool.poetry.dev-dependencies]
-ansible-lint = "^5.4.0"
-bandit = "^1.7.0"
-black = "^22.1.0"
-coverage = "^6.3.1"
+ansible-lint = "^6.2.1"
+bandit = "^1.7.4"
+black = "^22.3.0"
+coverage = "^6.3.3"
 flake8 = "^4.0.1"
-flake8-black = "^0.2.4"
+flake8-black = "^0.3.3"
 flake8-docstrings = "^1.6.0"
-flake8-isort = "^4.0.2"
+flake8-isort = "^4.1.1"
 isort = "^5.10.1"
 jedi = "^0.18.1"
-mccabe = "^0.6.1"
-mypy = ">=0.931"
+mypy = ">=0.950"
 pyls-flake8 = "^0.4.0"
 pyls-isort = "^0.2.2"
-pylsp-mypy = "^0.5.7"
-pylsp-rope = "^0.1.8"
-pytest = "^7.0.0"
-python-lsp-black = "^1.1.0"
-python-lsp-server = { version = "^1.3.3", extras = [
+pylsp-mypy = "^0.5.8"
+pylsp-rope = "^0.1.9"
+pytest = "^7.1.2"
+python-lsp-black = "^1.2.1"
+python-lsp-server = { version = "^1.4.1", extras = [
     "mccabe",
     "pycodestyle",
     "pydocstyle",
     "pyflakes",
     "rope",
 ] }
-tox = "^3.24.5"
-types-pyyaml = "^6.0.1"
+tox = "^3.25.0"
+types-pyyaml = "^6.0.3"
 yamllint = "^1.26.3"
 
 [tool.poetry.scripts]
@@ -60,11 +59,24 @@ openbsd-run = "openbsd_run.main:cli"
 #
 
 [tool.black]
-line-length = 79
+line-length = 99
 
 [tool.isort]
-line_length = 79
+line_length = 99
 lines_between_types = 1
 profile = "black"
 remove_redundant_aliases = true
-wrap_length = 79
+wrap_length = 99
+
+[tool.mypy]
+ignore_missing_imports = true
+show_error_context = true
+strict = true
+# Disable specific 'strict' checks
+check_untyped_defs = false
+disallow_any_generics = false
+disallow_incomplete_defs = false
+disallow_subclassing_any = false
+disallow_untyped_calls = false
+disallow_untyped_decorators = false
+disallow_untyped_defs = false
